# PDF-RAG-Agent

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  RUNNING.md  alembic.ini  db_bootstrap.sql  docker-compose.yml  pyproject.toml  run.py  run.sh  tracker.md
eval/: attribution.py  gen_harness.py  harness.py  ingest_wrapper.py  sweep.py
eval/scoring/: __init__.py  judge.py  numeric.py  retrieval.py
frontend/: .dockerignore  .gitignore  Dockerfile  package.json
frontend/src/: styles.css
frontend/src/components/pdf-rag/: ChatScreen.tsx  PdfRagApp.tsx  ProcessingScreen.tsx  SideDrawer.tsx  UploadScreen.tsx  api.ts  types.ts  usePdfRag.ts
frontend/src/routes/: __root.tsx  index.tsx
migrations/: env.py
migrations/versions/: a5fd31ade13d_baseline_documents_chunks.py
src/ragcore/: config.py  query.py  tokens.py
src/ragcore/db/: engine.py  models.py  repositories.py
src/ragcore/generate/: answer.py  summarize.py
src/ragcore/ingest/: chunk.py  content_gate.py  embed.py  metadata.py  pipeline.py  validate.py
src/ragcore/ingest/extract/: base.py  docling_extractor.py  pymupdf4llm_extractor.py
src/ragcore/llm/: gemini_client.py  generate.py  groq_client.py
src/ragcore/llm/prompts/: answer.txt  summarize_map.txt  summarize_reduce.txt
src/ragcore/retrieve/: hybrid.py  query_rewrite.py
src/ragcore/retrieve/rerank/: base.py  flashrank_reranker.py  identity.py
src/ragcore/sse/: events.py
tests/: test_sprint1.py  test_sprint2.py  test_sprint3.py  test_sprint7.py
web/: background.py  main.py
web/routes/: query.py  upload.py
